# cursor-portal

./: .gitignore  MIGRATION_GUIDE.md  README.md  requirements.txt
docs/: architecture.md  mcp-specs.md
docs/server/: mcp-server-complete.md  mcp-server-python-sdk.md  mcp-server-tools-only.md
servers/blog/: .env  .env.example  README.md  ghost_mcp_server.py
servers/creative/heygen-python-mcp/: .env  README.md  heygen-mcp-server.py
servers/creative/image-gen/: README.md
servers/creative/script-creator/: README.md
servers/creative/video-gen/: .env  .env.example  .gitignore  README.md  STEP_BY_STEP_PLAN.md  package-lock.json  package.json  server.ts
servers/media/: .env  .env.example  README.md  generate_image_mcp_server.py  requirements.txt  vertex_image_generator.py  vertex_mcp_server.py
servers/social/instagram/: README.md
servers/social/linkedin/: README.md
servers/social/twitter/: README.md
servers/test/: README.md  pyproject.toml  requirements.txt  simple_mcp_server.py
tasks/: roadmap.md  task-allocation.md
