[project]
name = "cursor-calculator"
version = "0.1.0"
description = "A simple MCP calculator server for Cursor"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.dependencies]
mcp = ">=1.2.1"
